# poetry2nix-sample

./: .gitignore  README.md
mydir/: flake.nix  pyproject.toml
mydir/helloworld/: app.py
