[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Walter Moreira <walter@waltermoreira.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
helloworld = 'helloworld.app:main'